[gd_scene load_steps=15 format=2]

[ext_resource path="res://Generic.tres" type="TileSet" id=1]
[ext_resource path="res://Escenes/goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenes/Damage.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/World.gd" type="Script" id=4]
[ext_resource path="res://Vegetacio.tres" type="TileSet" id=5]
[ext_resource path="res://Escenes/moneda.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tiles sets/Mar.png" type="Texture" id=7]
[ext_resource path="res://Tiles sets/nuvol.png" type="Texture" id=8]
[ext_resource path="res://scripts/Nuvols.gd" type="Script" id=9]
[ext_resource path="res://Escenes/Enemic.tscn" type="PackedScene" id=10]
[ext_resource path="res://fons.tres" type="TileSet" id=11]

[sub_resource type="Curve2D" id=13]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1045, -489, 0, 0, 0, 0, 843, -489 )
}

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 845, -490, -16.6077, -5.04538, 16.6077, 5.04538, 927, -487, -7.98852, -3.99426, 7.98852, 3.99426, 960, -475, -5.19131, 0.943874, 5.19131, -0.943874, 994, -476, -3.30356, 2.83162, 3.30356, -2.83162, 1021, -491, -6.84309, 8.02293, 6.84309, -8.02293, 1040, -509, 0, 0, 0, 0, 1071, -540, -12.5532, 4.40221, 12.5532, -4.40221, 1090, -554, 0, 0, 0, 0, 1134, -553 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 625.5, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Nuvols" type="ParallaxBackground" parent="."]
layer = -2

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Nuvols"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 600, 0 )

[node name="Cel" type="ColorRect" parent="Nuvols/ParallaxLayer2"]
show_behind_parent = true
margin_left = -569.0
margin_top = -200.0
margin_right = 605.0
margin_bottom = 388.0
rect_scale = Vector2( 1.72, 1.73838 )
rect_clip_content = true
color = Color( 0.333333, 0.705882, 1, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="Nuvols"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1200, 0 )
script = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="Nuvols/ParallaxLayer"]
position = Vector2( 64, 112 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 40, 0 )
flip_h = true
region_rect = Rect2( 0, 0, 1600, 128 )

[node name="Sprite3" type="Sprite" parent="Nuvols/ParallaxLayer"]
position = Vector2( 872, 296 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite" type="Sprite" parent="Nuvols/ParallaxLayer"]
position = Vector2( 624, 176 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )
centered = false
flip_h = true

[node name="Sprite2" type="Sprite" parent="Nuvols/ParallaxLayer"]
position = Vector2( 200, 376 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
centered = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
follow_viewport_enable = true
follow_viewport_scale = 0.6
scroll_limit_end = Vector2( 0, 100 )

[node name="Mar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_offset = Vector2( -630, 170 )

[node name="Mar" type="ColorRect" parent="ParallaxBackground/Mar"]
margin_right = 1174.0
margin_bottom = 152.0
rect_scale = Vector2( 1.72904, 2.01755 )
color = Color( 0.266667, 0.388235, 0.756863, 1 )

[node name="ones fons" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0 )
motion_offset = Vector2( -610, 160 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ones fons"]
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 7 )
centered = false
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 13056, 128 )

[node name="ones mitjanes" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0 )
motion_offset = Vector2( -626, 175 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ones mitjanes"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 11059.2, 128 )

[node name="Fons" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 524297, 5, 3, 655353, 0, 1, 655354, 0, 2, 655355, 536870912, 3, 655356, 536870912, 3, 589833, 5, 3, 720890, 2, 0, 720891, 1073741826, 1, 720892, 1073741826, 1, 655365, 5, 0, 655368, 5, 1, 655369, 5, 3, 786426, 2, 0, 786427, 1073741826, 1, 786428, 1073741826, 1, 720901, 5, 0, 720902, 5, 1, 720903, 5, 1, 720904, 5, 1, 720905, 5, 3, 720916, 5, 0, 720917, 5, 1, 720918, 5, 1, 720919, 5, 1, 720920, 5, 3, 851962, 2, 0, 851963, 1073741826, 1, 851964, 1073741826, 1, 786437, 5, 0, 786438, 5, 1, 786439, 5, 1, 786440, 5, 1, 786441, 5, 3, 786452, 5, 0, 786453, 5, 1, 786454, 5, 1, 786455, 5, 1, 786456, 5, 3, 917498, 2, 0, 917499, 1073741826, 1, 917500, 1073741826, 1, 851973, 5, 0, 851974, 5, 1, 851975, 5, 1, 851976, 5, 1, 851977, 5, 3, 851982, 1610612741, 65539, 851983, 1610612741, 65536, 851988, 5, 0, 851989, 5, 1, 851990, 5, 1, 851991, 5, 1, 851992, 5, 3, 983033, 1073741826, 65536, 983034, 1073741826, 65537, 983035, 1073741826, 1, 983036, 1073741826, 1, 917518, 1073741829, 0, 917519, 1073741829, 3, 917524, 5, 0, 917525, 5, 1, 917526, 5, 1, 917527, 5, 1, 917528, 5, 3, 917542, 536870938, 0, 917543, 536870920, 0, 1048569, 1073741826, 0, 1048570, 1073741826, 1, 1048571, 1073741826, 1, 1048572, 1073741826, 1, 1048574, 4, 3, 1048575, 4, 3, 983040, 4, 3, 983041, 4, 3, 983042, 4, 3, 983043, 4, 3, 983044, 4, 3, 983053, 1073741829, 65536, 983054, 1073741829, 65537, 983055, 1610612741, 0, 983059, 1073741829, 65536, 983060, 1073741829, 65537, 983061, 5, 1, 983062, 5, 1, 983063, 5, 1, 983064, 5, 3, 983077, 536870938, 0, 983079, 536870920, 0, 983080, 1073741829, 65539, 1114105, 1073741826, 0, 1114106, 1073741826, 1, 1114107, 1073741826, 1, 1114108, 1073741826, 1, 1114110, 536870917, 1, 1114111, 536870917, 1, 1048576, 5, 2, 1048577, 5, 2, 1048578, 5, 2, 1048579, 5, 2, 1048580, 5, 2, 1048589, 1073741829, 0, 1048590, 1073741829, 2, 1048591, 1610612741, 65537, 1048592, 1610612741, 65536, 1048595, 5, 1, 1048596, 1073741829, 1, 1048597, 5, 1, 1048598, 5, 1, 1048599, 5, 1, 1048600, 5, 3, 1048612, 536870938, 0, 1048615, 1610612741, 3, 1048616, 1073741829, 3, 1179640, 1073741826, 65536, 1179641, 1073741826, 65537, 1179642, 1073741826, 1, 1179643, 1073741826, 1, 1179644, 1073741826, 1, 1179646, 536870917, 1, 1179647, 536870917, 1, 1114112, 5, 2, 1114113, 18, 0, 1114114, 5, 2, 1114115, 5, 2, 1114116, 5, 2, 1114117, 5, 2, 1114125, 1073741829, 0, 1114126, 1073741829, 2, 1114127, 1073741829, 2, 1114128, 1073741829, 1, 1114129, 1073741829, 1, 1114130, 1073741829, 1, 1114131, 1073741829, 1, 1114132, 1073741829, 1, 1114133, 1073741829, 1, 1114134, 1073741829, 1, 1114135, 1073741829, 1, 1114151, 1610612741, 3, 1114152, 1073741829, 3, 1245176, 1073741826, 0, 1245177, 1073741826, 1, 1245178, 1073741826, 1, 1245179, 1073741826, 1, 1245180, 1073741826, 1, 1179660, 1073741829, 65536, 1179661, 1073741829, 65537, 1179662, 1073741829, 2, 1179663, 1073741829, 2, 1179664, 1073741829, 1, 1179665, 1073741829, 1, 1179666, 1073741829, 1, 1179667, 1073741829, 1, 1179668, 1073741829, 1, 1179669, 1073741829, 1, 1179670, 1073741829, 1, 1179671, 1073741829, 1, 1179687, 1610612741, 3, 1179688, 1073741829, 3, 1310712, 1073741826, 0, 1310713, 1073741826, 1, 1310714, 1073741826, 1, 1310715, 1073741826, 1, 1310716, 1073741826, 1, 1245196, 1073741829, 0, 1245197, 1073741829, 2, 1245198, 1073741829, 2, 1245199, 1073741829, 2, 1245200, 1073741829, 1, 1245201, 1073741829, 1, 1245202, 1073741829, 1, 1245203, 1073741829, 1, 1245204, 1073741829, 1, 1245205, 1073741829, 1, 1245206, 1073741829, 1, 1245207, 1073741829, 1, 1245223, 1073741829, 0, 1245224, 1610612741, 65537, 1245225, 1073741829, 65539, 1376248, 5, 0, 1376249, 5, 1, 1376250, 5, 1, 1376251, 5, 1, 1376252, 5, 1, 1376253, 5, 1, 1376254, 5, 1, 1376255, 5, 1, 1310721, 1073741829, 1, 1310722, 1073741829, 1, 1310723, 1073741829, 1, 1310724, 1073741829, 1, 1310725, 1073741829, 1, 1310726, 1073741829, 1, 1310727, 1073741829, 1, 1310728, 1073741829, 1, 1310729, 1073741829, 1, 1310730, 1073741829, 1, 1310732, 1073741829, 0, 1310733, 1073741829, 2, 1310734, 1073741829, 2, 1310735, 1073741829, 2, 1310736, 1073741829, 1, 1310737, 1073741829, 1, 1310738, 1073741829, 1, 1310739, 1073741829, 1, 1310740, 1073741829, 1, 1310741, 1073741829, 1, 1310742, 1073741829, 1, 1310743, 1073741829, 1, 1310748, 1073741829, 65539, 1310759, 1073741829, 0, 1310760, 1073741829, 1, 1310761, 1610612741, 0, 1376268, 1073741829, 0, 1376269, 1073741829, 2, 1376270, 1073741829, 2, 1376271, 1073741829, 2, 1376272, 1073741829, 1, 1376273, 1073741829, 1, 1376274, 1073741829, 1, 1376275, 1073741829, 1, 1376276, 1073741829, 1, 1376277, 1073741829, 1, 1376278, 1073741829, 1, 1376279, 1073741829, 1, 1376284, 1073741829, 3, 1376295, 1073741829, 0, 1376296, 1073741829, 1, 1376297, 1610612741, 0, 1441831, 1073741829, 0, 1441832, 1073741829, 1, 1441833, 1610612741, 0 )

[node name="TIlemap plataformes" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 60, 0, 0, 50, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -196612, 38, 0, -196611, 38, 0, -196610, 38, 0, -196609, 38, 0, -262144, 38, 0, -262143, 38, 0, -262142, 38, 0, -262141, 38, 0, -262140, 38, 0, -262139, 38, 0, -262138, 38, 0, -262137, 38, 0, -262136, 38, 0, -262135, 38, 0, -262134, 38, 0, -262133, 38, 0, -262132, 38, 0, -262131, 38, 0, -262130, 38, 0, -262129, 38, 0, -262128, 38, 0, -262127, 38, 0, -262126, 38, 0, -262125, 38, 0, -262124, 38, 0, -262123, 38, 0, -262122, 38, 0, -262121, 38, 0, -262120, 38, 0, -262119, 38, 0, -262118, 38, 0, -262117, 38, 0, -262116, 38, 0, -262115, 38, 0, -262114, 38, 0, -262113, 38, 0, -262112, 38, 0, -262111, 38, 0, -262110, 38, 0, -262109, 38, 0, -262108, 38, 0, -131076, 38, 0, -196572, 38, 0, -65540, 38, 0, -131036, 38, 0, -4, 38, 0, -65500, 38, 0, 65532, 38, 0, 36, 38, 0, 131068, 38, 0, 65572, 38, 0, 196604, 38, 0, 131101, 536870913, 0, 131108, 38, 0, 262140, 38, 0, 196632, 536870915, 0, 196637, 536870913, 131072, 196644, 38, 0, 327676, 38, 0, 262145, 0, 0, 262146, 1, 0, 262147, 536870912, 0, 262180, 38, 0, 393212, 38, 0, 327682, 1, 131072, 327694, 536870938, 0, 327695, 9, 0, 327716, 38, 0, 458748, 38, 0, 393229, 536870938, 0, 393231, 0, 1, 393232, 0, 2, 393233, 0, 3, 393234, 0, 3, 393235, 0, 3, 393236, 0, 3, 393237, 536870912, 2, 393238, 0, 6, 393252, 38, 0, 524284, 38, 0, 458761, 8, 0, 458762, 27, 0, 458763, 28, 0, 458764, 536870939, 0, 458768, 2, 0, 458769, 536870914, 2, 458770, 536870914, 2, 458771, 536870914, 2, 458772, 536870914, 2, 458773, 2, 3, 458788, 38, 0, 589820, 38, 0, 524291, 0, 0, 524292, 0, 1, 524293, 0, 2, 524294, 0, 3, 524295, 0, 3, 524296, 536870912, 2, 524297, 0, 6, 524304, 2, 0, 524305, 536870914, 2, 524306, 536870914, 2, 524307, 536870914, 2, 524308, 536870914, 2, 524309, 2, 3, 524314, 8, 0, 524315, 29, 0, 524316, 29, 0, 524317, 29, 0, 524318, 29, 0, 524319, 29, 0, 524320, 536870920, 0, 524324, 38, 0, 655356, 38, 0, 655357, 536870912, 2, 655358, 536870912, 1, 589829, 2, 0, 589830, 2, 2, 589831, 2, 2, 589832, 536870914, 0, 589836, 15, 3, 589840, 1073741826, 0, 589841, 1073741826, 1, 589842, 1073741826, 1, 589843, 1073741826, 1, 589844, 1073741826, 1, 589845, 1610612738, 65537, 589846, 0, 3, 589847, 0, 3, 589848, 0, 3, 589849, 536870912, 2, 589850, 536870912, 1, 589851, 30, 0, 589852, 30, 0, 589853, 30, 0, 589854, 30, 0, 589855, 30, 0, 589856, 0, 1, 589857, 0, 6, 589860, 38, 0, 720892, 38, 0, 720893, 1073741826, 3, 655365, 536870914, 65539, 655366, 536870937, 0, 655367, 536870937, 0, 655368, 2, 65539, 655376, 2, 65536, 655377, 536870937, 0, 655378, 536870937, 0, 655379, 536870937, 0, 655380, 536870937, 0, 655381, 536870937, 0, 655382, 536870937, 0, 655383, 536870937, 0, 655384, 536870937, 0, 655385, 536870914, 65536, 655396, 38, 0, 786428, 38, 0, 786429, 1073741826, 3, 720918, 15, 3, 720922, 15, 3, 720932, 38, 0, 851964, 38, 0, 851965, 1073741826, 3, 786432, 0, 0, 786433, 3, 0, 786434, 536870912, 0, 786468, 38, 0, 917500, 38, 0, 917501, 1073741826, 3, 852004, 38, 0, 983036, 38, 0, 983037, 1073741826, 3, 917507, 0, 0, 917508, 0, 1, 917509, 0, 2, 917510, 0, 3, 917511, 0, 3, 917512, 0, 3, 917513, 0, 3, 917514, 536870912, 2, 917515, 536870912, 1, 917516, 536870912, 0, 917540, 38, 0, 1048572, 38, 0, 1048573, 1073741826, 3, 983045, 2, 0, 983046, 536870914, 1, 983047, 536870914, 1, 983048, 536870914, 1, 983049, 536870914, 1, 983050, 536870914, 0, 983076, 38, 0, 983079, 1073741829, 65536, 1114108, 38, 0, 1114109, 1073741826, 3, 1048576, 5, 1, 1048577, 5, 1, 1048578, 5, 1, 1048579, 5, 1, 1048580, 5, 1, 1048581, 2, 0, 1048582, 536870914, 2, 1048583, 536870914, 2, 1048584, 536870914, 2, 1048585, 536870914, 2, 1048586, 536870914, 0, 1048591, 0, 0, 1048592, 0, 1, 1048593, 0, 2, 1048594, 536870912, 2, 1048595, 0, 6, 1048596, 536870912, 0, 1048604, 536870921, 0, 1048605, 26, 0, 1048612, 38, 0, 1179644, 38, 0, 1179645, 536870914, 0, 1114112, 5, 1, 1114113, 5, 1, 1114114, 5, 1, 1114115, 5, 1, 1114116, 5, 1, 1114117, 2, 0, 1114118, 536870914, 2, 1114119, 536870914, 2, 1114120, 536870914, 2, 1114121, 536870914, 2, 1114122, 536870914, 0, 1114129, 2, 65536, 1114130, 536870914, 65536, 1114134, 0, 0, 1114135, 0, 1, 1114136, 0, 2, 1114137, 0, 3, 1114138, 0, 3, 1114139, 0, 5, 1114140, 0, 6, 1114141, 536870912, 0, 1114142, 27, 0, 1114143, 536870940, 0, 1114144, 536870940, 0, 1114145, 536870940, 0, 1114146, 536870940, 0, 1114147, 536870939, 0, 1114148, 38, 0, 1245180, 38, 0, 1245181, 1610612738, 65537, 1245182, 0, 3, 1245183, 0, 3, 1179648, 536870912, 3, 1179649, 536870912, 3, 1179650, 536870912, 3, 1179651, 536870912, 3, 1179652, 536870912, 3, 1179653, 1073741826, 65537, 1179654, 536870914, 2, 1179655, 536870914, 2, 1179656, 536870914, 2, 1179657, 536870914, 2, 1179658, 536870914, 0, 1179672, 2, 0, 1179673, 2, 1, 1179674, 2, 1, 1179675, 2, 3, 1179684, 38, 0, 1310716, 38, 0, 1310717, 2, 1, 1310718, 2, 1, 1310719, 2, 1, 1245184, 536870914, 2, 1245185, 536870914, 2, 1245186, 536870914, 2, 1245187, 536870914, 2, 1245188, 536870914, 2, 1245189, 536870914, 2, 1245190, 536870914, 2, 1245191, 536870914, 2, 1245192, 536870914, 2, 1245193, 536870914, 2, 1245194, 536870914, 0, 1245208, 2, 0, 1245209, 2, 1, 1245210, 2, 1, 1245211, 2, 3, 1245220, 38, 0, 1376252, 38, 0, 1310720, 536870914, 2, 1310721, 536870914, 2, 1310722, 536870914, 2, 1310723, 536870914, 2, 1310724, 536870914, 2, 1310725, 536870914, 2, 1310726, 536870914, 2, 1310727, 536870914, 2, 1310728, 536870914, 2, 1310729, 536870914, 2, 1310730, 536870914, 0, 1310744, 2, 0, 1310745, 2, 1, 1310746, 2, 1, 1310747, 2, 3, 1310756, 38, 0, 1441788, 38, 0, 1376256, 5, 2, 1376257, 5, 2, 1376258, 5, 2, 1376259, 5, 2, 1376260, 5, 2, 1376261, 5, 2, 1376262, 5, 2, 1376263, 5, 2, 1376264, 5, 2, 1376265, 5, 2, 1376266, 5, 3, 1376280, 5, 0, 1376281, 5, 2, 1376282, 5, 2, 1376283, 5, 3, 1376292, 38, 0, 1507324, 38, 0, 1507325, 38, 0, 1507326, 38, 0, 1507327, 38, 0, 1441792, 38, 0, 1441793, 38, 0, 1441794, 38, 0, 1441795, 38, 0, 1441796, 38, 0, 1441797, 38, 0, 1441798, 38, 0, 1441799, 38, 0, 1441800, 38, 0, 1441801, 38, 0, 1441802, 38, 0, 1441803, 38, 0, 1441804, 38, 0, 1441805, 38, 0, 1441806, 38, 0, 1441807, 38, 0, 1441808, 38, 0, 1441809, 38, 0, 1441810, 38, 0, 1441811, 38, 0, 1441812, 38, 0, 1441813, 38, 0, 1441814, 38, 0, 1441815, 38, 0, 1441816, 38, 0, 1441817, 38, 0, 1441818, 38, 0, 1441819, 38, 0, 1441820, 38, 0, 1441821, 38, 0, 1441822, 38, 0, 1441823, 38, 0, 1441824, 38, 0, 1441825, 38, 0, 1441826, 38, 0, 1441827, 38, 0, 1441828, 38, 0 )

[node name="Detalls" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131096, 3, 0, 131100, 11, 0, 131102, 536870923, 0, 196610, 536870915, 0, 196627, 0, 0, 196631, 11, 0, 196633, 536870923, 0, 327695, 536870915, 0, 327697, 5, 0, 393230, 11, 0, 393239, 536870923, 0, 458757, 536870914, 0, 458761, 536870915, 0, 524298, 536870923, 0, 524310, 5, 0, 524311, 536870914, 0, 524321, 4, 0, 655352, 11, 0, 655359, 536870923, 0, 589845, 11, 0, 589851, 536870923, 0, 589855, 11, 0, 589858, 536870923, 0, 720897, 536870915, 0, 786441, 536870913, 0, 851977, 536870915, 0, 851978, 3, 0, 917528, 536870912, 0, 983056, 536870914, 0, 1048600, 536870915, 0, 1048601, 3, 0, 1048602, 5, 0, 1114115, 536870918, 0, 1245181, 11, 0, 1179653, 536870923, 0, 1245195, 7, 0, 1245196, 7, 0, 1245197, 7, 0, 1245198, 7, 0, 1245199, 7, 0, 1245200, 7, 0, 1245201, 7, 0, 1245202, 7, 0, 1245203, 7, 0, 1245204, 7, 0, 1245205, 7, 0, 1245206, 7, 0, 1245207, 7, 0, 1245212, 7, 0, 1245213, 7, 0, 1245214, 7, 0, 1245215, 7, 0, 1245216, 7, 0, 1245217, 7, 0, 1245218, 7, 0, 1245219, 7, 0, 1245220, 7, 0, 1245221, 7, 0, 1245222, 7, 0, 1245226, 7, 0, 1245227, 7, 0, 1245228, 7, 0, 1245229, 7, 0, 1245230, 7, 0, 1245231, 7, 0, 1245232, 7, 0, 1245233, 7, 0, 1245234, 7, 0, 1245235, 7, 0, 1245236, 7, 0, 1376238, 7, 0, 1376239, 7, 0, 1376240, 7, 0, 1376241, 7, 0, 1376242, 7, 0, 1376243, 7, 0, 1376244, 7, 0, 1376245, 7, 0, 1376246, 7, 0, 1376247, 7, 0, 1376248, 7, 0, 1376249, 7, 0, 1376250, 7, 0, 1376251, 7, 0, 1376252, 7, 0, 1376253, 7, 0, 1376254, 7, 0, 1376255, 7, 0, 1310720, 7, 0, 1310721, 7, 0, 1310722, 7, 0, 1310723, 7, 0, 1310724, 7, 0, 1310725, 7, 0, 1310726, 7, 0, 1310727, 7, 0, 1310728, 7, 0, 1310729, 7, 0, 1310730, 7, 0, 1310731, 9, 0, 1310732, 9, 0, 1310733, 9, 0, 1310734, 9, 0, 1310735, 9, 0, 1310736, 9, 0, 1310737, 9, 0, 1310738, 9, 0, 1310739, 9, 0, 1310740, 9, 0, 1310741, 9, 0, 1310742, 9, 0, 1310743, 9, 0, 1310744, 7, 0, 1310745, 7, 0, 1310746, 7, 0, 1310747, 7, 0, 1310748, 9, 0, 1310749, 9, 0, 1310750, 9, 0, 1310751, 9, 0, 1310752, 9, 0, 1310753, 9, 0, 1310754, 9, 0, 1310755, 9, 0, 1310756, 9, 0, 1310757, 9, 0, 1310758, 9, 0, 1376256, 9, 0, 1376257, 9, 0, 1376258, 9, 0, 1376259, 9, 0, 1376260, 9, 0, 1376261, 9, 0, 1376262, 9, 0, 1376263, 9, 0, 1376264, 9, 0, 1376265, 9, 0, 1376266, 9, 0, 1376267, 9, 0, 1376268, 9, 0, 1376269, 9, 0, 1376270, 9, 0, 1376271, 9, 0, 1376272, 9, 0, 1376273, 9, 0, 1376274, 9, 0, 1376275, 9, 0, 1376276, 9, 0, 1376277, 9, 0, 1376278, 9, 0, 1376279, 9, 0, 1376280, 9, 0, 1376281, 9, 0, 1376282, 9, 0, 1376283, 9, 0, 1376284, 9, 0, 1376285, 9, 0, 1376286, 9, 0, 1376287, 9, 0, 1376288, 9, 0, 1376289, 9, 0, 1376290, 9, 0, 1376291, 9, 0, 1376292, 9, 0, 1376293, 9, 0, 1376294, 9, 0, 1376295, 7, 0, 1376296, 7, 0, 1376297, 7, 0, 1441829, 9, 0, 1441830, 9, 0, 1441831, 9, 0, 1441832, 9, 0, 1441833, 9, 0 )

[node name="goal" parent="." instance=ExtResource( 2 )]
position = Vector2( 945, 11 )
scale = Vector2( 1.3, 1.3 )

[node name="Enemic" parent="." groups=["Enemics"] instance=ExtResource( 10 )]
position = Vector2( 579, 492 )
scale = Vector2( 0.8, 0.8 )
vida = 3
SEGON = true
state = "quiet"

[node name="puntInici" type="Position2D" parent="."]
position = Vector2( 1057, 480 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -684, 918 )
curve = SubResource( 13 )

[node name="Enemic" parent="Path2D" groups=["Enemics"] instance=ExtResource( 10 )]
position = Vector2( 1045, -489 )
rotation = 3.14159
scale = Vector2( 0.8, -0.8 )
loop = false
vida = 3
state = "patrulla"

[node name="Path2D3" type="Path2D" parent="."]
position = Vector2( -2, 757 )
curve = SubResource( 13 )

[node name="Enemic" parent="Path2D3" groups=["Enemics"] instance=ExtResource( 10 )]
position = Vector2( 1045, -489 )
rotation = 3.14159
scale = Vector2( 0.8, -0.8 )
loop = false
vida = 3
SEGON = true
state = "patrulla"

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2( -606, 726 )
curve = SubResource( 14 )

[node name="Enemic" parent="Path2D2" groups=["Enemics"] instance=ExtResource( 10 )]
position = Vector2( 845, -490 )
rotation = -0.0264363
scale = Vector2( 0.8, 0.8 )
loop = false
vida = 3
state = "patrulla"

[node name="Galeta" parent="." groups=["Pomes"] instance=ExtResource( 6 )]
position = Vector2( 73.0001, 548 )
scale = Vector2( 0.2, 0.2 )
VIDES = true

[node name="Galeta8" parent="." groups=["Pomes"] instance=ExtResource( 6 )]
position = Vector2( 578, 163 )
scale = Vector2( 0.2, 0.2 )
VIDES = true

[node name="Galeta3" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 80, 101 )
scale = Vector2( 0.2, 0.2 )

[node name="Galeta4" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 370, 214 )
scale = Vector2( 0.2, 0.2 )

[node name="Galeta5" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 786, 69 )
scale = Vector2( 0.2, 0.2 )

[node name="Galeta6" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 574, 430 )
scale = Vector2( 0.2, 0.2 )

[node name="Galeta7" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 947, 237 )
scale = Vector2( 0.2, 0.2 )

[node name="Galeta2" parent="." groups=["Monedes"] instance=ExtResource( 6 )]
position = Vector2( 50, 334 )
scale = Vector2( 0.2, 0.2 )

[node name="Area2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 355, 650 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 174.5, 15 )
shape = SubResource( 6 )

[connection signal="objectiu_assolit" from="goal" to="." method="_on_goal_objectiu_assolit"]
[connection signal="atac" from="Enemic" to="." method="_on_Enemic_atac"]
[connection signal="tocat" from="Enemic" to="." method="_on_Enemic_tocat"]
[connection signal="atac" from="Path2D/Enemic" to="." method="_on_Enemic_atac"]
[connection signal="tocat" from="Path2D/Enemic" to="." method="_on_Enemic_tocat"]
[connection signal="atac" from="Path2D3/Enemic" to="." method="_on_Enemic_atac"]
[connection signal="tocat" from="Path2D3/Enemic" to="." method="_on_Enemic_tocat"]
[connection signal="atac" from="Path2D2/Enemic" to="." method="_on_Enemic_atac"]
[connection signal="tocat" from="Path2D2/Enemic" to="." method="_on_Enemic_tocat"]
[connection signal="recollida" from="Galeta" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta8" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta8" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta3" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta3" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta4" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta4" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta5" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta5" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta6" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta6" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta7" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta7" to="." method="_on_Galeta_vida"]
[connection signal="recollida" from="Galeta2" to="." method="_on_Galeta_recollida"]
[connection signal="vida" from="Galeta2" to="." method="_on_Galeta2_vida"]
[connection signal="tocat" from="Area2D" to="." method="_on_Area2D_tocat"]

[editable path="Enemic"]
[editable path="Area2D"]
